2010-12-03  Ryan S. Arnold  <rsa@us.ibm.com>

	* configure: Regenerated.
	* configure.ac: Incremented the version number to 1.0.4
	* README.user: Marked empty sections with (TODO).
	* Versions.def: Incremented the version number to 1.0.4

2010-11-29  Ryan S. Arnold  <rsa@us.ibm.com>

	* README.user: Added clarification of how to include dfp/stdlib.h,
	dfp/fenv.h and dfp/wchar.h.

2010-11-29  Ryan S. Arnold  <rsa@us.ibm.com>

	* README.user: Added clarification of how to include dfp/math.h.

2010-11-29  Ryan S. Arnold  <rsa@us.ibm.com>

	* dfp/math.h: Move #include_next <math.h> so that if the compiler
	invocation has -I/<path>/include/dfp/ but doesn't define
	__STDC_WANT_DEC_FP__ that they still get the system math.h.

2010-11-19  Ryan S. Arnold  <rsa@us.ibm.com>

	* CONTRIBUTORS: Added Luis Machado.  Added DCO requirements.

2010-11-09  Luis Machado  <luisgpm@br.ibm.com>

	* strtod32.c (FUNCTION_L_INTERNAL): Fix comparison operator.

2010-11-08  Luis Machado  <luisgpm@br.ibm.com>

	* sysdeps/s390/dfpu/numdigits.h: Remove include guards.
	* sysdeps/powerpc/dfpu/numdigits.h: Likewise.
	* sysdeps/soft-dfp/dpd/numdigits.h: Likewise.

2010-10-07  Ryan S. Arnold  <rsa@us.ibm.com>

	* tests/test-printf.c (printf_d128s): Added 0.9999999999DL which
	reported 0.100000 rather than 1.000000 and was fixed by Andreas'
	patch from 2010-10-04.

2010-10-04  Andreas Schwab  <schwab@redhat.com>

	* printf_dfp.c (__printf_dfp): Fix up nd when rounding overflows
	beyond first digit.

2010-08-25  Luis Machado  <luisgpm@br.ibm.com>

	* sysdeps/soft-dfp/floatsisd.c: Don't generate additional decimal
	digit.

2010-08-24  Ryan S. Arnold  <rsa@us.ibm.com>

	* README.developer: Documentation update.
	* TODO: Mark some items as [DONE].

2010-08-23  Carlos Eduardo Seo  <cseo@linux.vnet.ibm.com>

	* init_dfp.c: Changed #include <dfp/dfp.h> to #include <dfp.h>.

2010-08-12  Luis Machado  <luisgpm@us.ibm.com>

	* tests/test-amort.c: Added license and copyright.